--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,14 @@
-<p>navbar works!</p>
+<mat-toolbar color="primary" class="mat-elevation-z6">
+    <span>Github Search</span>
+
+    <div class="spacer"></div>
+
+
+
+    <a mat-raised-button color="accent">Home</a>
+
+    <a mat-button>User</a>
+
+    <a mat-button>Repository</a>
+
+</mat-toolbar>
