--- a/src/styles.css
+++ b/src/styles.css
@@ -2,5 +2,12 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
+
+*{
+    box-sizing:border-box;
+    padding: 0;
+    margin: 0;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Roboto', sans-serif; }
