--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,10 +5,10 @@
 
 
 
-    <a mat-raised-button color="accent">Home</a>
+    <a mat-raised-button color="accent" routerLink="home">Home</a>
 
-    <a mat-button>User</a>
+    <a mat-button routerLink="user" >User</a>
 
-    <a mat-button>Repository</a>
+    <a mat-button routerLink ="repository">Repository</a>
 
 </mat-toolbar>
