--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
 <app-navbar></app-navbar>
+<!-- <app-home></app-home>
+<app-user></app-user>,
+<app-repository></app-repository> -->
+<router-outlet></router-outlet>
