--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,21 @@
-<p>user works!</p>
+<div class="container mt-3">
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <div class="card-header bg-primary text-white">
+                    <h4>Github User Search</h4>
+                </div>
+                <div class="card-body">
+                    <form class="form-inline">
+                        <div class="form-group">
+                            <input size="40" type="search" class="form-control" placeholder="Github User Search">
+                        </div><br>
+                        <div>
+                            <input type="submit" value="submit" class="btn btn-primary btn-sm">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
