--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+
+
+
+<div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title">Teresia King'ori</h5>
+        <p class="card-text">Teresia012</p>
+    </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item">Stemist</li>
+        <li class="list-group-item">Followers</li>
+        <li class="list-group-item">Following</li>
+        <li class="list-group-item">Location</li>
+        <li class="list-group-item">Date</li>
+    </ul>
+    <!-- <div class="card-body">
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div> -->
+</div>
