--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -8,7 +8,8 @@
                 <div class="card-body">
                     <form class="form-inline">
                         <div class="form-group">
-                            <input size="40" type="search" class="form-control" placeholder="Github User Search">
+                            <input size="40" name="user" type="search" class="form-control"
+                                placeholder="Github User Search">
                         </div><br>
                         <div>
                             <input type="submit" value="submit" class="btn btn-primary btn-sm">
