--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-
+<!-- <!-- 
 
 
 <div class="card" style="width: 18rem;">
@@ -18,4 +18,4 @@
       <a href="#" class="card-link">Card link</a>
       <a href="#" class="card-link">Another link</a>
     </div> -->
-</div>
+<!-- </div>  --> 
