--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
                         <p class="card-text"></p>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Bio{{personal.bio}}</li>
+                        <li class="list-group-item">Bio:{{personal.bio}}</li>
                         <li class="list-group-item">Username:{{personal.login}}</li>
                         <li class="list-group-item">Followers:{{personal.followers}}</li>
                         <li class="list-group-item">Following:{{personal.following}}</li>
