--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container">
-    <app-home></app-home>
-    <!-- <app-user></app-user>,
+<!-- <app-home></app-home> -->
+<!-- <app-user></app-user>
 <app-repository></app-repository> -->
-    <router-outlet></router-outlet>
-</div>
+<router-outlet></router-outlet>
