delete some errors

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     margin-top: 1rem;
 }
 
@@ -9,4 +9,4 @@ h2 {
 #carduser{
     position:absolute;
     margin-left: 3rem;
-}
+} */
