--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,27 +22,26 @@
             </div>
         </div>
         <div class="container">
-            <!-- <div class="col-md-6"> -->
-                <div class="row">
-                    <h2>Repositories</h2>
-                    <div class="col-md-3" *ngFor="let repo of repos">
-                        <div class="card2">
-                            <div class="card border-success mt-5">
-                                <div class="card-header"></div>
-                                <div class="card-body">
-                                    <h5 class="card-title">{{repo.name}}</h5>
-                                    <p class="card-text">{{repo.description}}</p>
-                                    <a href="{{repo.html_url}}" class="card-link" class="btn btn-sm btn-primary">View
-                                        the
-                                        Project</a>
-                                </div>
+        
+            <div class="row">
+                <h2>Repositories</h2>
+                <div class="col-md-3" *ngFor="let repo of repos">
+                    <div class="card2">
+                        <div class="card border-success mt-5">
+                            <div class="card-header"></div>
+                            <div class="card-body">
+                                <h5 class="card-title">{{repo.name}}</h5>
+                                <p class="card-text">{{repo.description}}</p>
+                                <a href="{{repo.html_url}}" class="card-link" class="btn btn-sm btn-primary">View the
+                                    Project</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    <!-- </div> -->
+    </div>
+
 </div>
 
 
