--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -6,7 +6,7 @@
                     <h4>Github User Search</h4>
                 </div>
                 <div class="card-body">
-                    <form class="form-inline" (ngSubmit)='findUser()'>
+                    <form class="form-inline" (ngSubmit)='findUser()' #form="ngForm">
                         <div class="form-group">
                             <input size="40" name="user" [(ngModel)]="user" type="search" class="form-control"
                                 placeholder="Github User Search">
