--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,6 +15,7 @@
                             <li class="list-group-item">Followers:{{personal.followers}}</li>
                             <li class="list-group-item">Following:{{personal.following}}</li>
                             <li class="list-group-item">Location:{{personal.location}}</li><br>
+                            <li class="list-group-item">Created on :{{personal.date|date}}</li><br>
                             <p><a href="{{personal.html_url}}" class="btn btn-primary btn-sm ">View Profile</a></p>
                         </ul>
                     </div>
