--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,6 +9,6 @@
 
     <a mat-button routerLink="user" >User</a>
 
-    <a mat-button routerLink ="repository">Repository</a>
+    <!-- <a mat-button routerLink ="repository">Repository</a> -->
 
 </mat-toolbar>
