--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -6,13 +6,13 @@
                     <h4>Github User Search</h4>
                 </div>
                 <div class="card-body">
-                    <form class="form-inline" (ngSubmit)='findUser()' #form="ngForm">
+                    <form class="form-inline">
                         <div class="form-group">
-                            <input size="40" name="user" [(ngModel)]="user" type="search" class="form-control"
+                            <input size="40" name="user"  (keyup)='findUser()'[(ngModel)]="user" type="search" class="form-control"
                                 placeholder="Github User Search">
                         </div><br>
                         <div>
-                            <input type="submit" value="submit" class="btn btn-primary btn-sm">
+                            <!-- <input type="submit" value="submit"  class="btn btn-primary btn-sm"> -->
                         </div>
                     </form>
                 </div>
